--- a/s3.yaml
+++ b/s3.yaml
@@ -3,6 +3,6 @@ resource "aws_s3_bucket" "bucket" {
 
   tags = {
     Name        = "My bucket"
-    Environment = "Dev"
+    Environment = "prod"
   }
 }
